--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Pizza Delícia</title>
 </head>
 <body>
+    <!-- inserindo comentário no index :)-->
+
     <!--Topo do Site-->
     <header>Pizza Delícia</header>
 
