--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                       
     <!-- Rodapé do site -->
      <footer>
-        Desenvolvido pela 
-        <a href="#" target="_blank">Tropa dos Raul</a>, 2023
+        Desenvolvido pelo 
+        <a href="#" target="_blank">Neimá</a>, 2023
      </footer>
     </div>
 
