--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div id="div-linha2">
             </div>
             <div class="links">
-                <h1> Bem Vindo á Pizzaria Pizza Delícia</h1>
+                <h1> Bem Vindo a grande e renomada Pizzaria Pizza Delícia</h1>
                 <p>Nos temos uma grande variedade de sabores entre pizzas salgadas, doces e mistas</p>
             </div>
         </div>
